--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container header-content">
@@ -20,6 +22,11 @@
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
@@ -28,7 +35,9 @@
             <div class="container">
                 <h1>Twoja wizja, nasza innowacja</h1>
                 <p>Tworzymy wyjątkowe strony i sklepy internetowe, które przeniosą Twój biznes na nowy poziom.</p>
+                <a href="#contact" class="cta-button">Rozpocznij projekt</a>
             </div>
+            <div class="hero-overlay"></div>
         </section>
 
         <section id="services" class="services">
@@ -129,36 +138,48 @@
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 1">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 1</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 2">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 2</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 3">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 3</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 4">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 4</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 5">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 5</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="/api/placeholder/600/400" alt="Projekt 6">
                         <div class="portfolio-overlay">
+                            <h3>Nazwa Projektu 6</h3>
+                            <p>Krótki opis projektu</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
@@ -230,16 +251,38 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 CreativeFront. Wszelkie prawa zastrzeżone.</p>
-            <div class="social-links">
-                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3>CreativeFront</h3>
+                    <p>Innowacyjne rozwiązania webowe dla Twojego biznesu</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Szybkie linki</h4>
+                    <ul>
+                        <li><a href="#home">Strona główna</a></li>
+                        <li><a href="#services">Usługi</a></li>
+                        <li><a href="#about">O nas</a></li>
+                        <li><a href="#portfolio">Realizacje</a></li>
+                        <li><a href="#contact">Kontakt</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <h4>Śledź nas</h4>
+                    <div class="social-links">
+                        <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 CreativeFront. Wszelkie prawa zastrzeżone.</p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
