--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container header-content">
-            <img src="creativefront-logo.png" alt="CreativeFront Logo" class="logo">
+            <img src="CreativeFront (1).jpg" alt="CreativeFront Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="#home">Strona główna</a></li>
