--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <div class="container header-content">
-            <img src="" alt="CreativeFront Logo" class="logo">
+            <img src="Logo strony CreativeFront (1).jpg" alt="CreativeFront Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="#home">Strona główna</a></li>
@@ -22,11 +20,6 @@
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
-            <div class="mobile-menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
         </div>
     </header>
 
@@ -35,9 +28,7 @@
             <div class="container">
                 <h1>Twoja wizja, nasza innowacja</h1>
                 <p>Tworzymy wyjątkowe strony i sklepy internetowe, które przeniosą Twój biznes na nowy poziom.</p>
-                <a href="#contact" class="cta-button">Rozpocznij projekt</a>
             </div>
-            <div class="hero-overlay"></div>
         </section>
 
         <section id="services" class="services">
@@ -78,7 +69,7 @@
                         <p>Specjalizujemy się w tworzeniu responsywnych stron internetowych, wydajnych sklepów online oraz kompleksowych strategii marketingu cyfrowego. Nasz zespół ekspertów łączy najnowsze trendy w designie z zaawansowanymi rozwiązaniami technologicznymi, aby zapewnić naszym klientom przewagę konkurencyjną w dynamicznym świecie online.</p>
                     </div>
                     <div class="about-image">
-                        <img src="/api/placeholder/500/300" alt="Zespół CreativeFront">
+                        <img src="Gray Minimalist Phone Mockup Facebook Cover.jpg" alt="Zespół CreativeFront">
                     </div>
                 </div>
                 <div class="stats">
@@ -136,50 +127,26 @@
                 <h2>Nasze realizacje</h2>
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 1">
+                        <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Projekt 1">
                         <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 1</h3>
-                            <p>Krótki opis projektu</p>
+                            <h3>Cichoszau.pl</h3>
+                            <p>Projekt strony internetowej</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 2">
+                        <img src="screencapture-starboys-pl-2024-07-23-19_17_09.png" alt="Projekt 2">
                         <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 2</h3>
-                            <p>Krótki opis projektu</p>
+                            <h3>Starboys.pl</h3>
+                            <p>Projekt strony internetowej</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 3">
+                        <img src="screencapture-vivalamoda-es-2024-07-23-19_18_00.png" alt="Projekt 3">
                         <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 3</h3>
-                            <p>Krótki opis projektu</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 4">
-                        <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 4</h3>
-                            <p>Krótki opis projektu</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 5">
-                        <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 5</h3>
-                            <p>Krótki opis projektu</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-item">
-                        <img src="/api/placeholder/600/400" alt="Projekt 6">
-                        <div class="portfolio-overlay">
-                            <h3>Nazwa Projektu 6</h3>
-                            <p>Krótki opis projektu</p>
+                            <h3>Vivalamoda.es</h3>
+                            <p>Projekt sklepu internetowego</p>
                             <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
@@ -251,38 +218,16 @@
 
     <footer>
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
-                    <h3>CreativeFront</h3>
-                    <p>Innowacyjne rozwiązania webowe dla Twojego biznesu</p>
-                </div>
-                <div class="footer-links">
-                    <h4>Szybkie linki</h4>
-                    <ul>
-                        <li><a href="#home">Strona główna</a></li>
-                        <li><a href="#services">Usługi</a></li>
-                        <li><a href="#about">O nas</a></li>
-                        <li><a href="#portfolio">Realizacje</a></li>
-                        <li><a href="#contact">Kontakt</a></li>
-                    </ul>
-                </div>
-                <div class="footer-social">
-                    <h4>Śledź nas</h4>
-                    <div class="social-links">
-                        <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-                        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-                        <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 CreativeFront. Wszelkie prawa zastrzeżone.</p>
+            <p>&copy; 2024 CreativeFront. Wszelkie prawa zastrzeżone.</p>
+            <div class="social-links">
+                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
-
 </html>
