--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container header-content">
-            <img src="Logo strony CreativeFront (1).jpg" alt="CreativeFront Logo" class="logo">
+            <img src="CreativeFront (1).jpg" alt="CreativeFront Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="#home">Strona główna</a></li>
@@ -131,7 +131,6 @@
                         <div class="portfolio-overlay">
                             <h3>Cichoszau.pl</h3>
                             <p>Projekt strony internetowej</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
@@ -139,7 +138,6 @@
                         <div class="portfolio-overlay">
                             <h3>Starboys.pl</h3>
                             <p>Projekt strony internetowej</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                     <div class="portfolio-item">
@@ -147,7 +145,6 @@
                         <div class="portfolio-overlay">
                             <h3>Vivalamoda.es</h3>
                             <p>Projekt sklepu internetowego</p>
-                            <a href="#" class="btn">Zobacz szczegóły</a>
                         </div>
                     </div>
                 </div>
