--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
                             <p>Projekt sklepu internetowego</p>
                         </div>
                     </div>
+                    <div class="portfolio-item">
+                        <img src="screencapture-icedstuff-pl-2024-07-23-19_35_46.png" alt="Projekt 4">
+                        <div class="portfolio-overlay">
+                            <h3>Icedstuff.pl</h3>
+                            <p>Projekt sklepu internetowego</p>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="screencapture-oakey-co-nz-2024-07-23-19_28_39.png" alt="Projekt 5">
+                        <div class="portfolio-overlay">
+                            <h3>Oakey.co.nz</h3>
+                            <p>Projekt strony internetowej</p>
+                        </div>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="screencapture-zloty-kroj-pl-2024-07-23-19_18_45.png" alt="Projekt 6">
+                        <div class="portfolio-overlay">
+                            <h3>Zloty-kroj.pl</h3>
+                            <p>Projekt sklepu internetowego</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -224,6 +245,11 @@
             </div>
         </div>
     </footer>
+
+    <div id="modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg">
+    </div>
 
     <script src="script.js"></script>
 </body>
