--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container header-content">
@@ -17,9 +18,15 @@
                     <li><a href="#services">Usługi</a></li>
                     <li><a href="#about">O nas</a></li>
                     <li><a href="#portfolio">Realizacje</a></li>
+                    <li><a href="#process">Proces</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
 
@@ -28,6 +35,7 @@
             <div class="container">
                 <h1>Twoja wizja, nasza innowacja</h1>
                 <p>Tworzymy wyjątkowe strony i sklepy internetowe, które przeniosą Twój biznes na nowy poziom.</p>
+                <a href="#contact" class="cta-button">Rozpocznij projekt</a>
             </div>
         </section>
 
@@ -122,6 +130,34 @@
             </div>
         </section>
 
+        <section id="why-us" class="why-us">
+            <div class="container">
+                <h2>Dlaczego warto wybrać CreativeFront?</h2>
+                <div class="why-us-grid">
+                    <div class="why-us-item">
+                        <i class="fas fa-award"></i>
+                        <h3>Doświadczenie</h3>
+                        <p>5 lat na rynku i setki zadowolonych klientów</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <h3>Wydajność</h3>
+                        <p>Nasze strony są szybkie i zoptymalizowane</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-users"></i>
+                        <h3>Wsparcie</h3>
+                        <p>Zapewniamy pełne wsparcie po zakończeniu projektu</p>
+                    </div>
+                    <div class="why-us-item">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>Innowacyjność</h3>
+                        <p>Wykorzystujemy najnowsze technologie i trendy</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="portfolio" class="portfolio">
             <div class="container">
                 <h2>Nasze realizacje</h2>
@@ -172,6 +208,39 @@
             </div>
         </section>
 
+        <section id="process" class="process">
+            <div class="container">
+                <h2>Proces wykonania Twojego zlecenia</h2>
+                <div class="process-steps">
+                    <div class="process-step">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>1. Konsultacja</h3>
+                        <p>Omawiamy Twoje potrzeby i cele biznesowe</p>
+                    </div>
+                    <div class="process-step">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>2. Projektowanie</h3>
+                        <p>Tworzymy unikalne projekty graficzne</p>
+                    </div>
+                    <div class="process-step">
+                        <i class="fas fa-code"></i>
+                        <h3>3. Rozwój</h3>
+                        <p>Implementujemy funkcjonalności i optymalizujemy wydajność</p>
+                    </div>
+                    <div class="process-step">
+                        <i class="fas fa-check-circle"></i>
+                        <h3>4. Testowanie</h3>
+                        <p>Sprawdzamy jakość i poprawiamy ewentualne błędy</p>
+                    </div>
+                    <div class="process-step">
+                        <i class="fas fa-rocket"></i>
+                        <h3>5. Wdrożenie</h3>
+                        <p>Uruchamiamy Twoją stronę i zapewniamy wsparcie</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Skontaktuj się z nami</h2>
@@ -186,10 +255,6 @@
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
                             <span>kontakt@creativefront.pl</span>
-                        </div>
-                        <div class="contact-method">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>ul. Przykładowa 123, 00-000 Warszawa</span>
                         </div>
                     </div>
                     <form class="contact-form">
@@ -232,6 +297,39 @@
                 </div>
             </div>
         </section>
+
+        <section id="faq" class="faq">
+            <div class="container">
+                <h2>Często zadawane pytania</h2>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Jak długo trwa realizacja projektu?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Czas realizacji projektu zależy od jego skomplikowania. Średnio trwa to od 2 do 6 tygodni.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Czy zapewniacie hosting i domenę?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Tak, możemy pomóc w wyborze i konfiguracji hostingu oraz domeny.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Czy oferujecie wsparcie po zakończeniu projektu?</h3>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Tak, oferujemy wsparcie techniczne i możliwość dalszego rozwoju projektu.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -252,5 +350,4 @@
     </div>
 
     <script src="script.js"></script>
-</body>
-</html>
+</body></html>
