--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section id="home" class="hero">
             <div class="container">
-                <h1>Twoja wizja, nasza innowacja</h1>
+                <h1>Twój sukces online zaczyna się tutaj</h1>
                 <p>Tworzymy wyjątkowe strony i sklepy internetowe, które przeniosą Twój biznes na nowy poziom.</p>
                 <a href="#contact" class="cta-button">Rozpocznij projekt</a>
             </div>
@@ -46,12 +46,12 @@
                     <div class="service-item">
                         <i class="fas fa-shopping-cart"></i>
                         <h3>Sklepy Shopify</h3>
-                        <p>Profesjonalne i wydajne sklepy na platformie Shopify</p>
+                        <p>Profesjonalne i wydajne sklepy/strony na platformie Shopify</p>
                     </div>
                     <div class="service-item">
                         <i class="fab fa-wordpress"></i>
                         <h3>Strony WordPress</h3>
-                        <p>Elastyczne i łatwe w zarządzaniu strony oparte o WordPress</p>
+                        <p>Elastyczne i łatwe w zarządzaniu strony/sklepy oparte o WordPress</p>
                     </div>
                     <div class="service-item">
                         <i class="fas fa-paint-brush"></i>
@@ -69,12 +69,14 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2>O nas</h2>
+                <h2>Kim jesteśmy?</h2>
                 <div class="about-content">
                     <div class="about-text">
                         <h3>Tworzymy przyszłość online</h3>
-                        <p>W CreativeFront wierzymy, że każdy biznes zasługuje na wyjątkową obecność w internecie. Nasza pasja do innowacji i kreatywnego myślenia pozwala nam tworzyć rozwiązania, które nie tylko wyglądają świetnie, ale również przynoszą realne rezultaty.</p>
-                        <p>Specjalizujemy się w tworzeniu responsywnych stron internetowych, wydajnych sklepów online oraz kompleksowych strategii marketingu cyfrowego. Nasz zespół ekspertów łączy najnowsze trendy w designie z zaawansowanymi rozwiązaniami technologicznymi, aby zapewnić naszym klientom przewagę konkurencyjną w dynamicznym świecie online.</p>
+                        <p>Witaj w CreativeFront! Jesteśmy Twoim partnerem w tworzeniu niesamowitych stron internetowych i sklepów online na platformach Shopify i WordPress. Nasza specjalność to budowanie funkcjonalnych i pięknych witryn, które nie tylko przyciągają uwagę, ale także działają bez zarzutu.</p>
+                        <p>Kochamy to, co robimy, a w branży jesteśmy już od ponad 3 lat. Nasz zespół doskonale zna się na HTML, CSS, JavaScript i różnych jego bibliotekach, takich jak React. Dzięki temu potrafimy zrealizować nawet najbardziej wymagające projekty. Ale to nie wszystko! Zajmujemy się również grafiką - tworzymy loga, banery i całą resztę wizualnych elementów, które sprawiają, że Twoja marka wyróżnia się na tle konkurencji.</p>
+                   <p>Wiemy, jak ważne jest, żeby strona była dobrze widoczna w wyszukiwarkach, dlatego optymalizujemy nasze projekty pod kątem SEO/SEM. Zwiększamy widoczność Twojej strony i przyciągamy na nią więcej klientów, co przekłada się na realne zyski.</p>
+                   <p>Najważniejsze dla nas jest to, żeby każdy projekt był wykonany rzetelnie i na czas. Dbamy o stały kontakt z klientem, żebyś zawsze wiedział, co się dzieje i żeby nie było żadnych niedomówień. Razem możemy stworzyć coś naprawdę wyjątkowego.</p>
                     </div>
                     <div class="about-image">
                         <img src="Gray Minimalist Phone Mockup Facebook Cover.jpg" alt="Zespół CreativeFront">
@@ -82,20 +84,20 @@
                 </div>
                 <div class="stats">
                     <div class="stat-item">
-                        <div class="stat-number" data-target="5">0</div>
+                        <div class="stat-number" data-target="3">0</div>
                         <p>Lat doświadczenia</p>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number" data-target="100">0</div>
+                        <div class="stat-number" data-target="120">0</div>
                         <p>Zrealizowanych projektów</p>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number" data-target="98">0</div>
+                        <div class="stat-number" data-target="120">0</div>
                         <p>Zadowolonych klientów</p>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number" data-target="14">0</div>
-                        <p>Dni - średni czas realizacji</p>
+                        <p>Średni czas realizacji projektu</p>
                     </div>
                 </div>
                 <div class="skills">
@@ -120,10 +122,10 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>HTML, CSS, JS</span>
-                            <span>75%</span>
+                            <span>80%</span>
                         </div>
                         <div class="skill-bar">
-                            <div class="skill-progress" data-width="75%"></div>
+                            <div class="skill-progress" data-width="80%"></div>
                         </div>
                     </div>
                 </div>
@@ -137,7 +139,7 @@
                     <div class="why-us-item">
                         <i class="fas fa-award"></i>
                         <h3>Doświadczenie</h3>
-                        <p>5 lat na rynku i setki zadowolonych klientów</p>
+                        <p>3 lat na rynku i setki zadowolonych klientów</p>
                     </div>
                     <div class="why-us-item">
                         <i class="fas fa-tachometer-alt"></i>
@@ -147,12 +149,12 @@
                     <div class="why-us-item">
                         <i class="fas fa-users"></i>
                         <h3>Wsparcie</h3>
-                        <p>Zapewniamy pełne wsparcie po zakończeniu projektu</p>
+                        <p>Zapewniamy pół roczne wsparcie po zakończeniu projektu</p>
                     </div>
                     <div class="why-us-item">
                         <i class="fas fa-lightbulb"></i>
                         <h3>Innowacyjność</h3>
-                        <p>Wykorzystujemy najnowsze technologie i trendy</p>
+                        <p>Wykorzystujemy najnowsze technologie i kierujemy się najnowszymi trendami</p>
                     </div>
                 </div>
             </div>
@@ -160,48 +162,48 @@
 
         <section id="portfolio" class="portfolio">
             <div class="container">
-                <h2>Nasze realizacje</h2>
+                <h2>Nasze ostatnie realizacje</h2>
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
                         <img src="screencapture-cichoszau-pl-2024-07-23-19_16_03.png" alt="Projekt 1">
                         <div class="portfolio-overlay">
                             <h3>Cichoszau.pl</h3>
-                            <p>Projekt strony internetowej</p>
+                            <p>Projekt strony internetowej zajmującej się organizacją imprez Silent Disco</p>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="screencapture-starboys-pl-2024-07-23-19_17_09.png" alt="Projekt 2">
                         <div class="portfolio-overlay">
                             <h3>Starboys.pl</h3>
-                            <p>Projekt strony internetowej</p>
+                            <p>Projekt skepu internetowego marki odzieżowej</p>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="screencapture-vivalamoda-es-2024-07-23-19_18_00.png" alt="Projekt 3">
                         <div class="portfolio-overlay">
                             <h3>Vivalamoda.es</h3>
-                            <p>Projekt sklepu internetowego</p>
+                            <p>Projekt sklepu wraz z stroną główna nawigującą do poszczególnych podstorn</p>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="screencapture-icedstuff-pl-2024-07-23-19_35_46.png" alt="Projekt 4">
                         <div class="portfolio-overlay">
                             <h3>Icedstuff.pl</h3>
-                            <p>Projekt sklepu internetowego</p>
+                            <p>Projekt sklepu internetowego zajmującego się sprzedażą męskiej i damskiej biżuternii</p>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="screencapture-oakey-co-nz-2024-07-23-19_28_39.png" alt="Projekt 5">
                         <div class="portfolio-overlay">
                             <h3>Oakey.co.nz</h3>
-                            <p>Projekt strony internetowej</p>
+                            <p>Projekt sklepu internetowego zajmującego się sprzedażą akcesorii detalingowych do samochodu </p>
                         </div>
                     </div>
                     <div class="portfolio-item">
                         <img src="screencapture-zloty-kroj-pl-2024-07-23-19_18_45.png" alt="Projekt 6">
                         <div class="portfolio-overlay">
                             <h3>Zloty-kroj.pl</h3>
-                            <p>Projekt sklepu internetowego</p>
+                            <p>Projekt sklepu internetowego działającego w branży wykrojów oraz szycia</p>
                         </div>
                     </div>
                 </div>
@@ -210,7 +212,7 @@
 
         <section id="process" class="process">
             <div class="container">
-                <h2>Proces wykonania Twojego zlecenia</h2>
+                <h2>Proces wykonania twojego zlecenia</h2>
                 <div class="process-steps">
                     <div class="process-step">
                         <i class="fas fa-lightbulb"></i>
@@ -220,12 +222,12 @@
                     <div class="process-step">
                         <i class="fas fa-pencil-alt"></i>
                         <h3>2. Projektowanie</h3>
-                        <p>Tworzymy unikalne projekty graficzne</p>
+                        <p>Tworzymy wizualizację twojej przyszłej strony</p>
                     </div>
                     <div class="process-step">
                         <i class="fas fa-code"></i>
-                        <h3>3. Rozwój</h3>
-                        <p>Implementujemy funkcjonalności i optymalizujemy wydajność</p>
+                        <h3>3.     Implementacja/h3>
+                        <p>Zaczynamy budować twoją stronę od podstaw uwzględniająć wcześniejszy projekt wizualny</p>
                     </div>
                     <div class="process-step">
                         <i class="fas fa-check-circle"></i>
@@ -235,7 +237,7 @@
                     <div class="process-step">
                         <i class="fas fa-rocket"></i>
                         <h3>5. Wdrożenie</h3>
-                        <p>Uruchamiamy Twoją stronę i zapewniamy wsparcie</p>
+                        <p>Uruchamiamy Twoją stronę i zapewniamy pół roczne wsparcie techniczne</p>
                     </div>
                 </div>
             </div>
@@ -250,11 +252,11 @@
                         <p>Masz pytania lub chcesz omówić swój projekt? Skontaktuj się z nami już dziś!</p>
                         <div class="contact-method">
                             <i class="fas fa-phone"></i>
-                            <span>+48 123 456 789</span>
+                            <span>+48 792 828 884</span>
                         </div>
                         <div class="contact-method">
                             <i class="fas fa-envelope"></i>
-                            <span>kontakt@creativefront.pl</span>
+                            <span>creativefront.projects@gmail.com</span>
                         </div>
                     </div>
                     <form class="contact-form">
@@ -276,7 +278,7 @@
                                 <input type="checkbox" name="service" value="shopify"> Strony/sklepy Shopify
                             </label>
                             <label>
-                                <input type="checkbox" name="service" value="wordpress"> Strony WordPress
+                                <input type="checkbox" name="service" value="wordpress"> Strony/sklepy WordPress
                             </label>
                             <label>
                                 <input type="checkbox" name="service" value="graphics"> Grafika i logo
@@ -285,7 +287,7 @@
                                 <input type="checkbox" name="service" value="seo"> SEO/SEM
                             </label>
                             <label>
-                                <input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów
+                                <input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów 
                             </label>
                         </div>
                         <div class="form-group">
@@ -307,7 +309,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Czas realizacji projektu zależy od jego skomplikowania. Średnio trwa to od 2 do 6 tygodni.</p>
+                        <p>Czas realizacji projektu zależy od jego skomplikowania oraz funkcjonalności jakie mają się znaleść na stronie. Średnio trwa to od 2 do 4 tygodni.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -316,7 +318,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Tak, możemy pomóc w wyborze i konfiguracji hostingu oraz domeny.</p>
+                        <p>Nie ale chętnie pomożemy w wyborze odpowiednego dla ciebie hostingu oraz skonfigurujemy domenę.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -325,7 +327,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Tak, oferujemy wsparcie techniczne i możliwość dalszego rozwoju projektu.</p>
+                        <p>Tak, oferujemy półroczne wsparcie techniczne i możliwość dalszego rozwoju projektu.</p>
                     </div>
                 </div>
             </div>
@@ -336,10 +338,8 @@
         <div class="container">
             <p>&copy; 2024 CreativeFront. Wszelkie prawa zastrzeżone.</p>
             <div class="social-links">
-                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
-                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/creativefront1/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                
             </div>
         </div>
     </footer>
