--- a/index.html
+++ b/index.html
@@ -259,43 +259,43 @@
                             <span>creativefront.projects@gmail.com</span>
                         </div>
                     </div>
-                    <form class="contact-form">
-                        <div class="form-group">
-                            <label for="name">Imię i nazwisko</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">Numer telefonu (opcjonalnie)</label>
-                            <input type="tel" id="phone" name="phone">
-                        </div>
-                        <div class="checkbox-group">
-                            <h4>Czego dotyczy wiadomość?</h4>
-                            <label>
-                                <input type="checkbox" name="service" value="shopify"> Strony/sklepy Shopify
-                            </label>
-                            <label>
-                                <input type="checkbox" name="service" value="wordpress"> Strony/sklepy WordPress
-                            </label>
-                            <label>
-                                <input type="checkbox" name="service" value="graphics"> Grafika i logo
-                            </label>
-                            <label>
-                                <input type="checkbox" name="service" value="seo"> SEO/SEM
-                            </label>
-                            <label>
-                                <input type="checkbox" name="service" value="maintenance"> Obsługa stron i sklepów 
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Wiadomość</label>
-                            <textarea id="message" name="message" required></textarea>
-                        </div>
-                        <button type="submit">Wyślij wiadomość</button>
-                    </form>
+                   <form class="contact-form" action="https://formspree.io/f/xovajzqz" method="POST">
+    <div class="form-group">
+        <label for="name">Imię i nazwisko</label>
+        <input type="text" id="name" name="name" required>
+    </div>
+    <div class="form-group">
+        <label for="email">E-mail</label>
+        <input type="email" id="email" name="_replyto" required>
+    </div>
+    <div class="form-group">
+        <label for="phone">Numer telefonu (opcjonalnie)</label>
+        <input type="tel" id="phone" name="phone">
+    </div>
+    <div class="checkbox-group">
+        <h4>Czego dotyczy wiadomość?</h4>
+        <label>
+            <input type="checkbox" name="services[]" value="shopify"> Strony/sklepy Shopify
+        </label>
+        <label>
+            <input type="checkbox" name="services[]" value="wordpress"> Strony WordPress
+        </label>
+        <label>
+            <input type="checkbox" name="services[]" value="graphics"> Grafika i logo
+        </label>
+        <label>
+            <input type="checkbox" name="services[]" value="seo"> SEO/SEM
+        </label>
+        <label>
+            <input type="checkbox" name="services[]" value="maintenance"> Obsługa stron i sklepów
+        </label>
+    </div>
+    <div class="form-group">
+        <label for="message">Wiadomość</label>
+        <textarea id="message" name="message" required></textarea>
+    </div>
+    <button type="submit">Wyślij wiadomość</button>
+</form>
                 </div>
             </div>
         </section>
