--- a/index.html
+++ b/index.html
@@ -275,19 +275,19 @@
     <div class="checkbox-group">
         <h4>Czego dotyczy wiadomość?</h4>
         <label>
-            <input type="checkbox" name="services[]" value="shopify"> Strony/sklepy Shopify
+            <input type="checkbox" name="Dotyczy" value="Strony/sklepy Shopify"> Strony/sklepy Shopify
         </label>
         <label>
-            <input type="checkbox" name="services[]" value="wordpress"> Strony WordPress
+            <input type="checkbox" name="Dotyczy" value="Strony WordPress"> Strony WordPress
         </label>
         <label>
-            <input type="checkbox" name="services[]" value="graphics"> Grafika i logo
+            <input type="checkbox" name="Dotyczy" value="Grafika i logo"> Grafika i logo
         </label>
         <label>
-            <input type="checkbox" name="services[]" value="seo"> SEO/SEM
+            <input type="checkbox" name="Dotyczy" value="SEO/SEM"> SEO/SEM
         </label>
         <label>
-            <input type="checkbox" name="services[]" value="maintenance"> Obsługa stron i sklepów
+            <input type="checkbox" name="Dotyczy" value="Obsługa stron i sklepów"> Obsługa stron i sklepów
         </label>
     </div>
     <div class="form-group">
